[package]
name = "redmine_client"
version = "0.0.1"
authors = ["ibrahim kisakesen <kisakesenhi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic-crypt = "3.1.8"
dirs = "3.0"
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking","stream"]}
tokio = {version = "1", features = [ "full" ] }
serde = "1.0"
serde_derive = "1.0"
clap = "2.33.3"
mac_address = "1.1.1"
csv = "1.1"
futures="0.3"
tokio-util = { version = "0.6", features = ["codec"] }
mime_guess = "2.0.3"
quoted-string = "0.6.1"
newline-converter = "0.2.0"
